# librsync

./: .gitignore  Makefile.am  configure.ac
examples/stream/: CMakeLists.txt  README.md  a.txt  a.txt.new  b.txt  client.c  common.h  server.c
